Update tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,10 @@
-set -g status off
+set-option -g status-style bg=white
+set-option -g status off
+set-option -g pane-border-style fg=white
+set-option -g pane-active-border-style fg=white
+set-option -g escape-time 50
+
+set -g status-keys vi
+set -g mode-keys vi
+set -g mouse on
 
